# echo-ai

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt
.specify/: init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
agents/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  langgraph.json  pyproject.toml
agents/src/main_agent/: graph.py  primary_agent.py  reasoning.py  skeptic.py
agents/src/main_agent/utils/: agent.py  diagnostics.py  llm_model.py  retry.py  state.py  utilities.py
agents/src/main_agent/utils/nodes/: criticality_node.py  summarization_nodes.py  timestamp_node.py
agents/src/main_agent/utils/tools/: memory_tool.py
agents/tests/integration_tests/: test_graph.py
agents/tests/unit_tests/: test_configuration.py  test_summarization.py
echo_ai_agent/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  langgraph.json  primary_agent.py  primary_graph.py  pyproject.toml
echo_ai_agent/primary_agent/: README.md  primary_agent.py  primary_graph.py
echo_ai_agent/primary_agent/tools/: memory_tool.py  summarization_tool.py
echo_ai_agent/primary_agent/utils/: agent.py  node_manager.py
echo_ai_agent/tools/: memory_tool.py  summarization_tool.py
echo_ai_agent/utils/: agent.py  node_manager.py  state.py  utilities.py
infra/: db.py  llm_model.py
presentation/: README.md  terminal.py
presentation/web/: .dockerignore  .env  .env.example  Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt  web_interface.py
presentation/web/interface/: web_interface.py
